--- a/vercel.json
+++ b/vercel.json
@@ -3,20 +3,14 @@
   "public": true,
   "functions": {
     "src/api/**/*.js": {
-      "runtime": "@vercel/node"
+      "runtime": "@vercel/node@18"
     }
   },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/src/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
   "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/src/api/$1"
+    },
     {
       "source": "/",
       "destination": "/index.html"
