--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "serve .",
     "build": "echo 'Static site - no build needed'",
     "start": "serve .",
-    "preview": "serve ."
+    "preview": "serve .",
+    "fix-paths": "node fix-paths.js"
   },
   "keywords": [
     "finance",
@@ -23,5 +24,8 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.51.0"
   }
 }
