Fix Vercel deployment configuration and environment variables

--- a/vercel.json
+++ b/vercel.json
@@ -35,5 +35,14 @@
       "source": "/transaksi",
       "destination": "/src/templates/transaksi.html"
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "github": {
+    "enabled": true,
+    "silent": true
+  }
 }
